Fix wrapping on card links on Firefox
The cards have the three links with icons: Website, Twitter, Repo. For me on Firefox 89, there's a line wrap between Website and its icon, and it makes my eye twitch. This does not happen on Chrome or Web. I just slightly adjusted the `grid-repeat-columns` property and the wrap goes away. I'm still learning my way around HTML grids, so my solution could be dumb. And I don't know where the very magic previous value of `36.156%` came from. Anyway, with this change, everything looks good to me on Firefox, Chrome, and Web, all on Fedora 34.

--- a/app/components/card/card.scss
+++ b/app/components/card/card.scss
@@ -32,7 +32,7 @@
         padding: 0 20px;
         &[data-layout="3-up"] {
             display: grid;
-            grid-template-columns: repeat(3, 36.156%);
+            grid-template-columns: repeat(3, 36.2%);
             grid-auto-rows: 1fr;
             > * {
               padding: 0 10px;
